fix whitespace issues in psalm listings

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -55,7 +55,9 @@ a {
 }
 
 .psalms-list {
-  a { display: inline-block; margin: 0 0.2em; }
+  & > a,
+  & > em,
+  & > span { display: inline-block; margin: 0 0.2em; }
 }
 
 @media print {
